Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug
Bug#: 5213
Product:  
Component:  
Status: RESOLVED
Resolution: FIXED
Assigned To: Nathan Sidwell <nathan@gcc.gnu.org>
Host:
Reported against  
Priority:  
Severity:  
Target Milestone:  
 
 
Target:
Reporter: pcarlini@unitus.it
Add CC:
CC:
Remove selected CCs
Build:
URL:
Summary:
Keywords:
Known to work:
Known to fail:

Attachment Description Type Created Size Actions
Create a New Attachment (proposed patch, testcase, etc.) View All

Bug 5213 depends on: Show dependency tree
Show dependency graph
Bug 5213 blocks:

Additional Comments:






View Bug Activity   |   Format For Printing   |   Clone This Bug


Description:   Last confirmed: Opened: 2001-12-28 14:16
This short snippet:
template <class T>
class vector { };

class OUTER {

public:
  template <class T>
  class List { };

  vector<class List> data;
};

triggers an ICE:
bug.cc:4: internal error: Segmentation fault

Release:
3.0.3, 3.1 20011228 (experimental)

Environment:
i686, Linux2.4.16, glibc2.2.4

How-To-Repeat:
No ICE but:
bug.cc:7: `struct list' redeclared as different kind of symbol
bug.cc:5: previous declaration of `template<class T> class list'
for (i.e., no enclosing class):
template <class T>
class vector { };

template <class T>
class List { };

vector<class List> data;

Also, the new parser ICEs on the first testcase, compiles
without errors the latter. Other compilers manage to deal
without errors with both of them.

------- Comment #1 From Nathan Sidwell 2001-12-29 03:39 -------
State-Changed-From-To: open->analyzed
State-Changed-Why: confirmed

------- Comment #2 From Nathan Sidwell 2001-12-29 07:25 -------
Responsible-Changed-From-To: unassigned->nathan
Responsible-Changed-Why: patch in progress

------- Comment #3 From Nathan Sidwell 2002-01-02 04:50 -------
State-Changed-From-To: analyzed->closed
State-Changed-Why: 2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
    
    	PR c++/5213
    	* pt.c (convert_template_argument): Be more careful determining
    	when RECORD_TYPE templates are or are not templates.

Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug