cp: 	PR c++/5213 	* pt.c (convert_template_argument): Be more careful determining 	when RECORD_TYPE templates are or are not templates. testsuite: 	* g++.dg/template/ttp3.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@48468 138bc75d-0d04-0410-961f-82ee72b054a4